[package]
name = "udpmonster"
version = "0.1.0"
authors = ["Davide Baldo <davide@baldo.me>"]
edition = "2018"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

[dependencies]
flatbuffers = { git = "file:///home/davide/git/flatbuffers/",  branch = "master" }
base64 = "0.11.0"
crc32c = "0.4.0"
lockfree = "0.5.1"
libc = "0.2.66"
easybench = "1.0.0"
byteorder = "1.3.2"
rand = "0.3"
